Cleaning up after copilot